--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
     height: 10px;
     width: 80px;
     border-radius: 4px;
+    transform: rotate(90deg)
 }
 
 .min-hand {
@@ -60,7 +61,7 @@ body {
     height: 8px;
     width: 140px;
     /* border-radius: 4px; */
-    transform: rotate(10deg)
+    /* transform: rotate(90deg) */
 }
 
 .second-hand {
