--- a/style.css
+++ b/style.css
@@ -19,8 +19,21 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, .6);
-    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 17px rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.clock-face::after {
+    content: '';
+    /* border: 1px solid red; */
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-13px, -13px);
+    background-color: #A8C5D1;
+    border-radius: 100%;
 }
 
 .color-face {
@@ -39,7 +52,7 @@ body {
     /* background-color: #fff; */
     transform-origin: right;
     transform: rotate(90deg);
-    box-shadow: 5px -5px 1px rgba(0, 0, 0, .5);
+    box-shadow: 5px -5px 1px rgba(0, 0, 0, .3);
 }
 
 .hour-hand {
